# TaskFlow

./: .gitignore  DockerFile  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  security.py
src/common/: dependency.py
src/migrations/: env.py
src/migrations/versions/: f59096e51e98_.py
src/projects/: dependency.py  enums.py  models.py  router.py  schemas.py
src/tasks/: constants.py  dependency.py  enums.py  models.py  router.py  schemas.py
tests/: conftest.py  test_auth.py  test_projects.py  test_tasks.py
